src/pages/ProductPage/components/DetailedProductSection.scss
.detailed-product {
  display: flex;
  flex-direction: row;
  margin-top: 40px;

  &__image-container {
    order: 1;
    flex: 0 1 38%;
    display: flex;
    justify-content: center;
  }

  &__image-block {
    display: flex;
    align-items: center;
    width: 100%;
    max-width: 560px;
    max-height: 560px;
    padding: 40px 20px;
  }

  &__image-image {
    width: 100%;
    max-height: 100%;
    padding: 20px;
    object-fit: contain;
  }

  &__description-block {
    order: 2;
    flex: 0 1 40%;
    padding-right: 10px;
  }

  &__added-block {
    order: 3;
    flex: 0 1 22%;
    padding-top: 20px;
    padding-left: 24px;
    border-left: 1px solid $grayscale-300;
  }

  &__header {
    margin-top: 40px;
    @include GolosMedium(24px, 115%, $grayscale-900);
  }

  &__description {
    margin-top: 30px;
    @include GolosRegular(14px, 140%, $grayscale-900);
  }

  &__price-container {
    display: flex;
    align-items: center;
    margin-top: 48px;
    gap: 40px;
  }

  &__price {
    @include GolosMedium(28px, 110%, $grayscale-900);
  }

  &__priceBefore {
    @include GolosRegular(16px, 100%, $grayscale-600);
    text-decoration: line-through;
  }

  &__button-container {
    margin-top: 20px;
  }

  &__documentation-header {
    @include GolosMedium(18px, 100%, $grayscale-900);
  }

  &__documentation-list {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-top: 20px;
  }

  &__documentation-element {
    @include GolosRegular(14px, 100%, $grayscale-900);
    display: flex;
    align-items: center;
  }

  &__documentation-element:before {
    content: '';
    background-image: url('@/assets/images/svg/product-page-documentation.svg');
    background-size: cover;
    min-width: 20px;
    width: 20px;
    height: 20px;
    margin-right: 10px;
  }

  @media screen and (max-width: $tablet) {
    flex-direction: column;
    margin-top: 32px;

    &__image-container {
      order: 2;
    }

    &__image-block {
      padding: 0;
    }

    &__image-image {
      padding: 0 20px;
    }

    &__description-block {
      order: 3;
    }

    &__added-block {
      order: 1;
      padding-top: 0;
      padding-left: 0;
      border: none;
    }

    &__header {
      margin-top: 0;
      @include GolosMedium(18px, 115%, $grayscale-900);
    }

    &__description {
      margin-top: 30px;
      @include GolosRegular(14px, 140%, $grayscale-900);
    }

    &__documentation-block {
      display: none;
    }

    &__price-container {
      display: flex;
      align-items: center;
      margin-top: 32px;
      gap: 12px;
    }

    &__price {
      @include GolosMedium(18px, 115%, $grayscale-900);
    }

    &__priceBefore {
      @include GolosRegular(12px, 100%, $grayscale-600);
    }

    &__button-container {
      margin-top: 16px;
    }
  }
}

.overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 999 !important;
  background-color: rgba(0, 0, 0, 0.7);
}

.modal-window {
  position: fixed;
  top: 50%;
  left: 50%;
  z-index: 1000;
  display: flex;
  align-items: center;
  width: 80%;
  max-width: 820px;
  max-height: 820px;
  padding: 40px;
  background-color: $grayscale-50;
  transform: translate(-50%, -50%);
  box-shadow:
    0 15px 20px rgba(0, 0, 0, 0.2),
    0 20px 40px rgba(0, 0, 0, 0.3);

  &__image {
    width: 100%;
    height: 100%;
    padding: 20px;
    object-fit: contain;
  }

  @media screen and (max-width: $tablet) {
    width: 100%;
  }
}

.close-button {
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 1001;
  width: 30px;
  height: 30px;
  background-color: #fff;
  border-radius: 50%;
  cursor: pointer;
}

.close-button:before,
.close-button:after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 60%;
  height: 2px;
  background-color: #333;
}

.close-button:before {
  transform: translate(-50%, -50%) rotate(45deg);
}

.close-button:after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

.swiper {
  z-index: 0;
}

.swiper-slider {
  display: flex;
  align-items: center;
}

.swiper-slide .detailed-product__image-image {
  max-height: 560px;

  @media screen and (max-width: $tablet) {
    max-height: 300px;
  }
}

.detailed-product__image-block .swiper-slide {
  width: 100% !important;
  max-width: 100%;
}

